# backend

./: Procfile  organization_did.json  pyproject.toml
algoid_backend/: main.py
algoid_backend/apps/common/contract/: __init__.py  client.py
algoid_backend/apps/common/graphql/types/: output.py  scalars.py
algoid_backend/apps/users/graphql/mutations/: auth.py  users.py
algoid_backend/apps/users/graphql/types/input/: auth.py  users.py
algoid_backend/apps/users/graphql/types/outputs/: auth.py  users.py
algoid_backend/apps/users/models/: auth.py  users.py
algoid_backend/config/: context.py  db.py  did.py  schema.py  settings.py
algoid_backend/constants/: table_names.py
migrations/: env.py
migrations/versions/: 005fbda6833f_add_email_verified_field_to_user.py  1774982255c9_create_users_tables.py  6842007c94b9_create_auth_token_table.py  b22129a72fa2_add_did_field_to_profile_table.py
